--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-  color: #ff7678;
+  color: #553d67;
   font-size: 1.5rem;
 }
 
@@ -76,7 +76,7 @@ thead th {
   margin-top: 1rem;
   padding: 1.5rem;
   border: none;
-  background-color: #ffa1a3;
+  background-color: #f64c72;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
@@ -130,7 +130,7 @@ thead th {
   h1,
   #add-person {
     font-size: 1.2rem;
-    background-color: #ff767865;
+    background-color: #f64c72;
   }
 
   .cont-input {
