--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,11 @@ thead th {
   padding: 1.5rem;
   border: none;
   background-color: #f64c72;
-  color: #fff;
+  color: #f6fff9;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
   transition: all 0.2s ease-out;
 }
 #add-person:active {
@@ -127,7 +128,6 @@ thead th {
     flex-direction: column;
   }
 
-  h1,
   #add-person {
     font-size: 1.2rem;
     background-color: #f64c72;
