--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-  color: #553d67;
+  color: #000000;
   font-size: 1.5rem;
 }
 
@@ -76,8 +76,8 @@ thead th {
   margin-top: 1rem;
   padding: 1.5rem;
   border: none;
-  background-color: #f64c72;
-  color: #f6fff9;
+  background-color: #000000ec;
+  color: #e69500;
   border-radius: 5px;
   cursor: pointer;
   font-size: 1.2rem;
